# gpu-solve

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  plotter.py  runExperiments.py
examples/: data-2nd_order.conf  data-2nd_order_fast.conf
src/: CMakeLists.txt  CpuGridData.cpp  CpuGridData.h  CpuSolver.cpp  CpuSolver.h  Stencil.cpp  SyclGridData.cpp  SyclGridData.h  SyclSolver.cpp  SyclSolver.h  Timer.cpp  Timer.h  Vector3.cpp  Vector3.h  gridParams.h  main.cpp
src/cpu/: CpuGridData.cpp  CpuGridData.h  CpuSolver.cpp  CpuSolver.h  NewtonSolver.cpp  NewtonSolver.h  Vector3.cpp  Vector3.h
src/sycl/: ContextHandles.h  NewtonSolver.cpp  NewtonSolver.h  SyclBuffer.h  SyclGridData.cpp  SyclGridData.h  SyclSolver.cpp  SyclSolver.h  sycl_compat.h
